fixed carousel btns z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #ffffff;  /* The default color of the main navmenu links */
-  --nav-hover-color: #9e304b; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: #dd7b93; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #444444; /* Used for navigation links of the dropdown items in the navigation menu. */
@@ -922,6 +922,8 @@ section,
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
+  z-index: 1;
+
 }
 
 /* =========================================
@@ -952,7 +954,10 @@ section,
   padding: 1.5rem;
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  position: relative;
+  z-index: 1;
 }
+
 .project-card p {
   color: #00000083;
   font-size: 0.7rem;
@@ -1008,7 +1013,7 @@ section,
 }
 
 /* =========================================
-   Navigation Buttons (FIXED ABOVE CARDS)
+   Navigation Buttons
 ========================================= */
 
 .carousel-nav {
@@ -1019,7 +1024,7 @@ section,
   transform: translateY(-50%);
   display: flex;
   justify-content: space-between;
-  z-index: 1000; /* VERY important */
+  z-index: 5; /* only above cards */
   pointer-events: none;
 }
 
@@ -1035,7 +1040,6 @@ section,
   cursor: pointer;
   backdrop-filter: blur(6px);
   transition: all 0.3s ease;
-  z-index: 1001; /* higher than cards */
 }
 
 .carousel-btn:hover {
